--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,28 @@
 # Welcome to Jekyll!
-#
+ github: [metadata]
+ kramdown:
+   input: GFM
+   hard_wrap: false
+ gems:
+   - jekyll-coffeescript
+   - jekyll-paginate
 
 # Site settings
-title: Spectral
+title: 
 description: |
-  Another fine responsive  
-  site template freebie  
-  crafted by [HTML5 UP](http://html5up.net)
-owner: Your Name # or company name
+  Kadenze Course on Daniel Shiffman http://natureofcode.com
+  in P5.js 
+owner: Marinella Mastrosimone # or company name
 first_published: 2016 # if migrating another site, the year of your first publish
-email: your-email@domain.com
+email: marinella.mastrosimone@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://marinella.mastrosimone.eu" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/<username>
-  github: https://github.com/<username>
-  linkedin-square: https://linkedin.com/in/<username>
-  facebook-official: https://facebook.com/<username>
-  google-plus-square: https://plus.google.com/u/0/+<username>
+  twitter: https://twitter.com/<cybermarinella>
+  github: https://github.com/<cybermarinella>
+  linkedin-square: https://it.linkedin.com/in/cybermarinella
+  #facebook-official: https://facebook.com/<username>
+  #google-plus-square: https://plus.google.com/u/0/+<username>
   #email: /contact/
   #flickr:
   #instagram:
